--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@lyno/lib-jitsi-meet": "^2.5390.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "node": "^16.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-jitsi": "^1.0.4",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
